smoothed some interactions out and added some more dotfiles

--- a/dotfiles/ssh/.ssh/config
+++ b/dotfiles/ssh/.ssh/config
@@ -1,4 +1,4 @@
-Host github.com
-    HostName github.com
-    User git
-    IdentitiesOnly yes
+Include /Users/ethnhll/.colima/ssh_config
+
+Host *
+   IdentityAgent ~/.strongbox/agent.sock
