--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -22,7 +22,7 @@
       - firefox@developer-edition
       - iterm2
       - jetbrains-toolbox
-      - keepassxc
+      - keepassxc  # provides keepassxc-cli
       - obsidian  # text editor
       - proton-drive
       - proton-pass
@@ -30,6 +30,12 @@
       - rectangle  # tiling window manager
       - virtualbox
       - yubico-authenticator  # security key TOTP
+    dotfiles_dir: "{{ playbook_dir }}/../dotfiles"
+    dotfile_packages:
+      - git
+      - ssh
+      - vim
+      - zsh
     store_apps:
       - 497799835  # XCode
       - 897283731  # Strongbox
@@ -45,21 +51,24 @@
         state: present
         update_homebrew: true
 
+    - name: Stow dotfiles
+      ansible.builtin.command:
+        cmd: stow --adopt -d {{ dotfiles_dir }} -t {{ ansible_env.HOME }} {{ item }}
+      loop: "{{ dotfile_packages }}"
+      register: stow_result
+      changed_when: stow_result.rc == 0
+
     - name: Install Homebrew casks
       when: ansible_os_family == "Darwin"
       community.general.homebrew_cask:
         name: "{{ brew_casks }}"
         state: present
 
-    - name: Stow dotfiles
-      ansible.builtin.command:
-        cmd: stow -d {{ dotfiles_dir }} -t {{ ansible_env.HOME }} {{ item }}
-      loop: "{{ dotfile_packages }}"
-      register: stow_result
-      changed_when: stow_result.rc == 0
-
     - name: Install Apple Store Apps
+      when: ansible_os_family == "Darwin"
+      become: true
       ansible.builtin.command:
-        cmd: mas install {{ store_apps }}
+        cmd: mas install {{ store_apps | join(' ') }}
       register: app_store_result
-      changed_when: app_store_result.rc == 0
+      changed_when: "'Already installed' not in app_store_result.stdout"
+      failed_when: app_store_result.rc != 0 and 'Already installed' not in app_store_result.stdout
