--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -9,10 +9,12 @@
   tasks:
     - name: Stow dotfiles
       ansible.builtin.command:
-        cmd: stow --adopt -d {{ dotfiles_dir }} -t {{ ansible_env.HOME }} {{ item }}
+        cmd: stow --no-folding --adopt -d {{ dotfiles_dir }} -t {{ ansible_env.HOME }} {{ item }}
       loop: "{{ dotfile_packages }}"
       register: stow_result
       changed_when: stow_result.rc == 0
+      tags:
+        - dotfiles
 
     - name: Install Homebrew packages
       when: ansible_os_family == "Darwin"
@@ -20,9 +22,24 @@
         name: "{{ homebrew_packages }}"
         state: present
         update_homebrew: true
+      tags:
+        - homebrew
 
     - name: Install Homebrew casks
       when: ansible_os_family == "Darwin"
       community.general.homebrew_cask:
         name: "{{ homebrew_casks }}"
         state: present
+      tags:
+        - homebrew_casks
+
+    - name: Install Apple Store Apps
+      when: ansible_os_family == "Darwin"
+      become: true
+      ansible.builtin.command:
+        cmd: mas install {{ store_apps | join(' ') }}
+      register: app_store_result
+      changed_when: "'Already installed' not in app_store_result.stdout"
+      failed_when: app_store_result.rc != 0 and 'Already installed' not in app_store_result.stdout
+      tags:
+        - app_store
