added brew prefix fixes

--- a/ansible/default.config.yml
+++ b/ansible/default.config.yml
@@ -1,5 +1,7 @@
 ---
 
+brew_prefix: "{{ '/opt/homebrew' if ansible_architecture == 'arm64' else '/usr/local' }}"
+
 dotfiles_dir: "{{ playbook_dir }}/../dotfiles"
 dotfile_packages:
   - cache
