--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -28,7 +28,7 @@
       when: ansible_os_family == "Darwin"
       become: true
       ansible.builtin.command:
-        cmd: mas install {{ store_apps | join(' ') }}
+        cmd: "{{ brew_prefix }}/bin/mas install {{ store_apps | join(' ') }}"
       register: app_store_result
       changed_when: "'Already installed' not in app_store_result.stdout"
       failed_when: app_store_result.rc != 0 and 'Already installed' not in app_store_result.stdout
@@ -37,7 +37,7 @@
 
     - name: Stow dotfiles
       ansible.builtin.command:
-        cmd: stow --no-folding --override -d {{ dotfiles_dir }} -t {{ ansible_env.HOME }} {{ item }}
+        cmd: "{{ brew_prefix }}/bin/stow --no-folding --override -d {{ dotfiles_dir }} -t {{ ansible_env.HOME }} {{ item }}"
       loop: "{{ dotfile_packages }}"
       register: stow_result
       changed_when: stow_result.rc == 0
