--- a/ansible/default.config.yml
+++ b/ansible/default.config.yml
@@ -20,6 +20,7 @@ homebrew_packages:
   - git
   - localstack
   - mas  # Mac Apple Store CLI
+  - protonpass/tap/pass-cli
   - starship
   - stow
   - vim
