changed strongbox to proton pass

--- a/dotfiles/ssh/.ssh/config
+++ b/dotfiles/ssh/.ssh/config
@@ -1,1 +1,4 @@
 # https://stackoverflow.com/questions/3225862/multiple-github-accounts-ssh-config
+Host *
+   IdentityAgent ~/.ssh/proton-pass-agent.sock
+
